# TTScript

./: CMakeLists.txt  README.md
api/: CMakeLists.txt  characters.hpp  game.hpp  library.cpp  library.h  log.hpp  map.hpp  memaccess.hpp  ttlib.h
inject/: CMakeLists.txt  main.cpp
